# parallel-computing-systems

./: .gitignore
lab2/: lab2.md  lab2_automation.sh
lab2/first/: CMakeLists.txt  first.c
lab2/fourth/: fourth.c
lab2/second/: second.c
lab2/third/: third.c
lab3/: lab3_automation.sh
lab4/: lab4_automation.sh  localOnNodeScript.sh
lab4/first/: first.cu
lab4/fourth/: fourth.c  fourth.cu
lab4/second/: second.cu
lab4/third/: third.cu
parallel-computing-systems/lab2/fourth/: fourth.c
parallel-computing-systems/lab2/second/: second.c
parallel-computing-systems/lab3/fourth/: fourth.c
parallel-computing-systems/lab4/third/: third.c
